--- a/environment.yml
+++ b/environment.yml
@@ -19,7 +19,7 @@ dependencies:
   - ca-certificates=2025.7.9=hbd8a1cb_0
   - cairo=1.18.4=h6a3b0d2_0
   - catalogue=2.0.10=py312h81bd7bf_1
-  - certifi=2025.7.9=pyhd8ed1ab_0
+  - certifi=2025.7.14=py312hca03da5_0
   - cffi=1.17.1=py312h0fad829_0
   - charset-normalizer=3.4.2=pyhd8ed1ab_0
   - click=8.1.8=py312hca03da5_0
@@ -70,6 +70,7 @@ dependencies:
   - ipykernel=6.29.5=pyh57ce528_0
   - ipython=9.4.0=pyhfa0c392_0
   - ipython_pygments_lexers=1.1.1=pyhd8ed1ab_0
+  - ipywidgets=8.1.5=py312hca03da5_0
   - jasper=4.2.5=h743e416_0
   - jedi=0.19.2=pyhd8ed1ab_1
   - jinja2=3.1.6=pyhd8ed1ab_0
@@ -77,6 +78,7 @@ dependencies:
   - joblib=1.4.2=py312hca03da5_0
   - jupyter_client=8.6.3=pyhd8ed1ab_1
   - jupyter_core=5.8.1=pyh31011fe_0
+  - jupyterlab_widgets=3.0.15=py312hca03da5_0
   - kiwisolver=1.4.8=py312h313beb8_0
   - krb5=1.21.3=h237132a_0
   - lame=3.100=h1a28f6b_0
@@ -161,7 +163,7 @@ dependencies:
   - numexpr=2.10.1=py312h5d9532f_0
   - numpy=2.3.1=py312hc3f7a0e_0
   - numpy-base=2.3.1=py312he1c501e_0
-  - openai=1.95.1=pyhd8ed1ab_0
+  - openai=1.97.0=pyhd8ed1ab_0
   - opencv=4.12.0=qt6_py312h6553b77_600
   - openexr=3.3.4=h37c74dd_0
   - openh264=2.6.0=h514c7bf_0
@@ -205,7 +207,7 @@ dependencies:
   - regex=2024.11.6=py312h80987f9_0
   - requests=2.32.4=pyhd8ed1ab_0
   - rich=14.0.0=pyh29332c3_0
-  - scikit-learn=1.7.0=py312h39203ce_1
+  - scikit-learn=1.7.1=py312h54d6233_0
   - scipy=1.15.3=py312hb81b3df_0
   - sdl2=2.32.54=ha1acc90_0
   - sdl3=3.2.16=h92d3ae7_0
@@ -245,6 +247,7 @@ dependencies:
   - wcwidth=0.2.13=pyhd8ed1ab_1
   - weasel=0.4.1=pyhd8ed1ab_2
   - wheel=0.45.1=py312hca03da5_0
+  - widgetsnbextension=4.0.13=py312hca03da5_0
   - wrapt=1.17.2=py312hea69d52_0
   - x264=1!164.3095=h57fd34a_2
   - x265=3.5=hbc6ce65_3
@@ -259,5 +262,23 @@ dependencies:
   - zstandard=0.23.0=py312hea69d52_2
   - zstd=1.5.7=h6491c7d_2
   - pip:
+      - anthropic==0.57.1
+      - cachetools==5.5.2
       - en-core-web-sm==3.8.0
+      - google-ai-generativelanguage==0.6.15
+      - google-api-core==2.25.1
+      - google-api-python-client==2.176.0
+      - google-auth==2.40.3
+      - google-auth-httplib2==0.2.0
+      - google-generativeai==0.8.5
+      - googleapis-common-protos==1.70.0
+      - grpcio==1.73.1
+      - grpcio-status==1.71.2
+      - httplib2==0.22.0
+      - proto-plus==1.26.1
+      - protobuf==5.29.5
+      - pyasn1==0.6.1
+      - pyasn1-modules==0.4.2
+      - rsa==4.9.1
+      - uritemplate==4.2.0
 prefix: /opt/anaconda3/envs/JCDL2025
