--- a/environment.yml
+++ b/environment.yml
@@ -6,20 +6,36 @@ channels:
   - https://repo.anaconda.com/pkgs/main
   - https://repo.anaconda.com/pkgs/r
 dependencies:
+  - _python_abi3_support=1.0=hd8ed1ab_2
   - annotated-types=0.7.0=pyhd8ed1ab_1
   - anyio=4.7.0=py312hca03da5_0
   - aom=3.9.1=h7bae524_0
   - appnope=0.1.4=pyhd8ed1ab_1
+  - arrow-cpp=13.0.0=hce30654_49_cpu
   - asttokens=3.0.0=pyhd8ed1ab_1
+  - aws-c-auth=0.7.22=h8a62e84_10
+  - aws-c-cal=0.7.1=h94d0942_1
+  - aws-c-common=0.9.23=h99b78c6_0
+  - aws-c-compression=0.2.18=h94d0942_7
+  - aws-c-event-stream=0.4.2=hb74cd8f_15
+  - aws-c-http=0.8.2=had1507a_6
+  - aws-c-io=0.14.10=hcdb10ff_1
+  - aws-c-mqtt=0.10.4=h856d8ab_8
+  - aws-c-s3=0.6.0=ha9fd6de_2
+  - aws-c-sdkutils=0.1.16=h94d0942_3
+  - aws-checksums=0.1.18=h94d0942_7
+  - aws-crt-cpp=0.27.3=h9d3339c_2
+  - aws-sdk-cpp=1.11.329=he6360a2_9
   - blas=1.0=openblas
+  - boost-cpp=1.85.0=h103c1d6_4
   - bottleneck=1.4.2=py312ha86b861_0
   - brotli-python=1.0.9=py312h313beb8_9
   - bzip2=1.0.8=h80987f9_6
   - c-ares=1.34.5=h5505292_0
-  - ca-certificates=2025.7.9=hbd8a1cb_0
+  - ca-certificates=2025.8.3=hbd8a1cb_0
   - cairo=1.18.4=h6a3b0d2_0
   - catalogue=2.0.10=py312h81bd7bf_1
-  - certifi=2025.7.14=py312hca03da5_0
+  - certifi=2025.8.3=pyhd8ed1ab_0
   - cffi=1.17.1=py312h0fad829_0
   - charset-normalizer=3.4.2=pyhd8ed1ab_0
   - click=8.1.8=py312hca03da5_0
@@ -28,6 +44,7 @@ dependencies:
   - comm=0.2.2=pyhd8ed1ab_1
   - confection=0.1.5=pyhecae5ae_0
   - contourpy=1.3.1=py312h48ca7d4_0
+  - cpython=3.12.11=py312hd8ed1ab_0
   - cycler=0.11.0=pyhd3eb1b0_0
   - cymem=2.0.11=py312hd8f9ff3_0
   - cyrus-sasl=2.1.28=ha1cbb27_0
@@ -41,7 +58,8 @@ dependencies:
   - exceptiongroup=1.3.0=pyhd8ed1ab_0
   - executing=2.2.0=pyhd8ed1ab_0
   - expat=2.7.0=h286801f_0
-  - ffmpeg=7.1.1=gpl_h20db955_106
+  - ffmpeg=6.1.2=gpl_hbafc610_106
+  - filelock=3.17.0=py312hca03da5_0
   - font-ttf-dejavu-sans-mono=2.37=hd3eb1b0_0
   - font-ttf-inconsolata=2.001=hcb22688_0
   - font-ttf-source-code-pro=2.030=hd3eb1b0_0
@@ -53,15 +71,22 @@ dependencies:
   - freetype=2.13.3=hce30654_1
   - fribidi=1.0.10=h1a28f6b_0
   - gdk-pixbuf=2.42.12=h7ddc832_0
+  - gettext=0.25.1=h3dcc1bd_0
+  - gettext-tools=0.25.1=h493aca8_0
+  - gflags=2.2.2=h313beb8_1
+  - glog=0.7.1=heb240a5_0
   - gmp=6.3.0=h313beb8_0
+  - gnutls=3.7.9=hd26332c_0
   - graphite2=1.3.14=hc377ac9_1
   - h11=0.16.0=py312hca03da5_0
   - h2=4.2.0=pyhd8ed1ab_0
   - harfbuzz=11.2.1=hab40de2_0
-  - hdf5=1.14.6=nompi_ha698983_101
+  - hdf5=1.14.3=nompi_ha698983_109
+  - hf-xet=1.1.5=py39h7e234a0_3
   - hpack=4.1.0=pyhd8ed1ab_0
   - httpcore=1.0.9=py312hca03da5_0
   - httpx=0.28.1=pyhd8ed1ab_0
+  - huggingface_hub=0.34.3=pyhd8ed1ab_0
   - hyperframe=6.1.0=pyhd8ed1ab_0
   - icu=75.1=hfee45f7_0
   - idna=3.10=pyhd8ed1ab_1
@@ -85,30 +110,46 @@ dependencies:
   - langcodes=3.3.0=pyhd8ed1ab_0
   - lcms2=2.17=h7eeda09_0
   - lerc=4.0.0=h313beb8_0
-  - libabseil=20250127.1=cxx17_h07bc746_0
+  - libabseil=20240116.2=cxx17_h313beb8_0
   - libaec=1.1.4=h51d1e36_0
+  - libarrow=13.0.0=h4d6bf39_49_cpu
   - libasprintf=0.25.1=h493aca8_0
+  - libasprintf-devel=0.25.1=h493aca8_0
   - libass=0.17.3=h68e5b86_2
-  - libavif16=1.3.0=hf1e31eb_0
+  - libavif16=1.1.1=h45b7238_2
   - libblas=3.9.0=1_h2ec9a88_netlib
+  - libboost=1.85.0=hf763ba5_4
+  - libboost-devel=1.85.0=hf450f58_4
+  - libboost-headers=1.85.0=hce30654_4
+  - libbrotlicommon=1.1.0=h5505292_3
+  - libbrotlidec=1.1.0=h5505292_3
+  - libbrotlienc=1.1.0=h5505292_3
   - libcblas=3.9.0=11_h742a510_netlib
   - libclang-cpp18.1=18.1.8=default_hf90f093_10
   - libclang13=20.1.8=default_h91d7d2a_0
+  - libcrc32c=1.1.2=hc377ac9_0
   - libcurl=8.14.1=h73640d1_0
   - libcxx=20.1.8=ha82da77_0
   - libdeflate=1.24=h5773f1b_0
   - libedit=3.1.20191231=hc8eb9b7_2
   - libev=4.33=h1a28f6b_1
+  - libevent=2.1.12=h02f6b3c_1
   - libexpat=2.7.0=h286801f_0
   - libffi=3.4.6=h1da3d7d_1
   - libfreetype=2.13.3=hce30654_1
   - libfreetype6=2.13.3=h1d14073_1
   - libgettextpo=0.25.1=h493aca8_0
+  - libgettextpo-devel=0.25.1=h493aca8_0
   - libgfortran=5.0.0=14_2_0_h6c33f7e_103
   - libgfortran5=14.2.0=h6c33f7e_103
   - libglib=2.84.2=hbec27ea_0
+  - libgoogle-cloud=2.26.0=hfe08963_0
+  - libgoogle-cloud-storage=2.26.0=h1466eeb_0
+  - libgrpc=1.62.2=h9c18a4f_0
   - libiconv=1.18=hfe07756_1
+  - libidn2=2.3.4=h80987f9_0
   - libintl=0.25.1=h493aca8_0
+  - libintl-devel=0.25.1=h493aca8_0
   - libjpeg-turbo=3.1.0=h5505292_0
   - liblapack=3.9.0=11_hd5e45d6_netlib
   - liblapacke=3.9.0=11_h5bf4901_netlib
@@ -120,29 +161,34 @@ dependencies:
   - libntlm=1.8=h5505292_0
   - libogg=1.3.5=h1a28f6b_1
   - libopenblas=0.3.29=openmp_hf332438_0
-  - libopencv=4.12.0=qt6_py312h33dbad3_600
-  - libopenvino=2025.0.0=h3f17238_3
-  - libopenvino-arm-cpu-plugin=2025.0.0=h3f17238_3
-  - libopenvino-auto-batch-plugin=2025.0.0=h7f72211_3
-  - libopenvino-auto-plugin=2025.0.0=h7f72211_3
-  - libopenvino-hetero-plugin=2025.0.0=h718ad69_3
-  - libopenvino-ir-frontend=2025.0.0=h718ad69_3
-  - libopenvino-onnx-frontend=2025.0.0=h1ae5b81_3
-  - libopenvino-paddle-frontend=2025.0.0=h1ae5b81_3
-  - libopenvino-pytorch-frontend=2025.0.0=h286801f_3
-  - libopenvino-tensorflow-frontend=2025.0.0=heb6e3e1_3
-  - libopenvino-tensorflow-lite-frontend=2025.0.0=h286801f_3
+  - libopencv=4.10.0=headless_py312haa779ad_6
+  - libopenvino=2024.4.0=h49f535f_0
+  - libopenvino-arm-cpu-plugin=2024.4.0=h49f535f_0
+  - libopenvino-auto-batch-plugin=2024.4.0=h8a2fcec_0
+  - libopenvino-auto-plugin=2024.4.0=h8a2fcec_0
+  - libopenvino-hetero-plugin=2024.4.0=h868cbb4_0
+  - libopenvino-ir-frontend=2024.4.0=h868cbb4_0
+  - libopenvino-onnx-frontend=2024.4.0=hf4ed89a_0
+  - libopenvino-paddle-frontend=2024.4.0=hf4ed89a_0
+  - libopenvino-pytorch-frontend=2024.4.0=hf9b8971_0
+  - libopenvino-tensorflow-frontend=2024.4.0=h94307f2_0
+  - libopenvino-tensorflow-lite-frontend=2024.4.0=hf9b8971_0
   - libopus=1.5.2=h48c0fde_0
   - libpng=1.6.50=h3783ad8_0
   - libpq=17.5=h6896619_0
-  - libprotobuf=5.29.3=hccd9074_1
+  - libprotobuf=4.25.3=hc39d83c_1
+  - libre2-11=2024.02.01=h12402fc_0
   - librsvg=2.58.4=h266df6f_3
   - libsodium=1.0.20=h99b78c6_0
   - libsqlite=3.50.2=h4237e3c_2
   - libssh2=1.11.1=h1590b86_0
+  - libtasn1=4.19.0=h80987f9_0
+  - libthrift=0.19.0=h026a170_1
   - libtiff=4.7.0=h2f21f7c_5
+  - libunistring=0.9.10=h1a28f6b_0
   - libusb=1.0.29=hbc156a2_0
-  - libvorbis=1.3.7=h9f76cd9_0
+  - libutf8proc=2.8.0=hc098a78_1
+  - libvorbis=1.3.7=h81086ad_2
   - libvpx=1.14.1=h7bae524_0
   - libwebp-base=1.6.0=h07db88b_0
   - libxcb=1.17.0=h3fc13f7_0
@@ -159,19 +205,22 @@ dependencies:
   - murmurhash=1.0.10=py312hf02c72a_2
   - ncurses=6.5=h5e97a16_3
   - nest-asyncio=1.6.0=pyhd8ed1ab_1
+  - nettle=3.9.1=h40ed0f5_0
   - nltk=3.9.1=py312hca03da5_0
   - numexpr=2.10.1=py312h5d9532f_0
-  - numpy=2.3.1=py312hc3f7a0e_0
-  - numpy-base=2.3.1=py312he1c501e_0
-  - openai=1.97.0=pyhd8ed1ab_0
-  - opencv=4.12.0=qt6_py312h6553b77_600
-  - openexr=3.3.4=h37c74dd_0
-  - openh264=2.6.0=h514c7bf_0
+  - numpy=1.26.4=py312h7f4fdc5_0
+  - numpy-base=1.26.4=py312he047099_0
+  - openai=1.99.1=pyhd8ed1ab_0
+  - opencv=4.10.0=headless_py312hf580477_6
+  - openexr=3.2.2=hab01212_2
+  - openh264=2.4.1=hebf3989_0
   - openjpeg=2.5.2=hba36e21_1
   - openldap=2.6.10=hbe55e7a_0
-  - openssl=3.5.1=h81ee809_0
+  - openssl=3.5.2=he92f556_0
+  - orc=2.0.1=h47ade37_1
+  - p11-kit=0.24.1=h29577a5_0
   - packaging=25.0=pyh29332c3_1
-  - pandas=2.2.3=py312hcf29cfe_0
+  - pandas=2.3.1=py312h43d6402_0
   - pango=1.56.4=h875632e_0
   - parso=0.8.4=pyhd8ed1ab_1
   - pcre2=10.45=ha881caa_0
@@ -186,9 +235,9 @@ dependencies:
   - psutil=5.9.0=py312h80987f9_1
   - pthread-stubs=0.3=h1a28f6b_1
   - ptyprocess=0.7.0=pyhd8ed1ab_1
-  - pugixml=1.15=hd3d436d_0
+  - pugixml=1.14=h13dd4ca_0
   - pure_eval=0.2.3=pyhd8ed1ab_1
-  - py-opencv=4.12.0=qt6_py312h33fe3e1_600
+  - py-opencv=4.10.0=headless_py312hd31a7ba_6
   - pycparser=2.22=pyh29332c3_1
   - pydantic=2.11.7=pyh3cfb1c2_0
   - pydantic-core=2.33.2=py312hd3c0895_0
@@ -197,18 +246,21 @@ dependencies:
   - pysocks=1.7.1=pyha55dd90_7
   - python=3.12.11=hc22306f_0_cpython
   - python-dateutil=2.9.0.post0=pyhe01879c_2
+  - python-gil=3.12.11=hd8ed1ab_0
   - python-tzdata=2025.2=pyhd3eb1b0_0
   - python_abi=3.12=7_cp312
   - pytz=2025.2=py312hca03da5_0
+  - pyyaml=6.0.2=py312h80987f9_0
   - pyzmq=26.2.0=py312h313beb8_0
   - qt6-main=6.9.1=h9cca212_1
-  - rav1e=0.7.1=h0716509_3
+  - rav1e=0.6.6=h69fbcac_2
+  - re2=2024.02.01=h48ca7d4_0
   - readline=8.2=h1a28f6b_0
   - regex=2024.11.6=py312h80987f9_0
   - requests=2.32.4=pyhd8ed1ab_0
   - rich=14.0.0=pyh29332c3_0
   - scikit-learn=1.7.1=py312h54d6233_0
-  - scipy=1.15.3=py312hb81b3df_0
+  - scipy=1.16.0=py312h224531d_0
   - sdl2=2.32.54=ha1acc90_0
   - sdl3=3.2.16=h92d3ae7_0
   - setuptools=72.1.0=py312hca03da5_0
@@ -224,7 +276,7 @@ dependencies:
   - sqlite=3.50.2=hb5dd463_2
   - srsly=2.5.1=py312hd8f9ff3_1
   - stack_data=0.6.3=pyhd8ed1ab_1
-  - svt-av1=3.0.2=h8ab69cd_0
+  - svt-av1=2.3.0=hf24288c_0
   - tbb=2022.0.0=h48ca7d4_0
   - texsoup=0.3.1=pyh9f0ad1d_0
   - thinc=8.3.6=py312h708dc23_0
@@ -256,15 +308,24 @@ dependencies:
   - xz=5.8.1=h9a6d368_2
   - xz-gpl-tools=5.8.1=h9a6d368_2
   - xz-tools=5.8.1=h39f12f2_2
+  - yaml=0.2.5=h1a28f6b_0
   - zeromq=4.3.5=h9f5b81c_6
   - zipp=3.23.0=pyhd8ed1ab_0
   - zlib=1.3.1=h8359307_2
   - zstandard=0.23.0=py312hea69d52_2
   - zstd=1.5.7=h6491c7d_2
   - pip:
+      - aiohappyeyeballs==2.6.1
+      - aiohttp==3.12.15
+      - aiosignal==1.4.0
       - anthropic==0.57.1
+      - attrs==25.3.0
       - cachetools==5.5.2
+      - datasets==4.0.0
+      - dill==0.3.8
       - en-core-web-sm==3.8.0
+      - frozenlist==1.7.0
+      - fsspec==2025.3.0
       - google-ai-generativelanguage==0.6.15
       - google-api-core==2.25.1
       - google-api-python-client==2.176.0
@@ -275,10 +336,16 @@ dependencies:
       - grpcio==1.73.1
       - grpcio-status==1.71.2
       - httplib2==0.22.0
+      - multidict==6.6.3
+      - multiprocess==0.70.16
+      - propcache==0.3.2
       - proto-plus==1.26.1
       - protobuf==5.29.5
+      - pyarrow==21.0.0
       - pyasn1==0.6.1
       - pyasn1-modules==0.4.2
       - rsa==4.9.1
       - uritemplate==4.2.0
+      - xxhash==3.5.0
+      - yarl==1.20.1
 prefix: /opt/anaconda3/envs/JCDL2025
